--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,6 @@
 name: flutter_my_bakery
 description: A new Flutter application.
 
-
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -22,43 +21,37 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-  horizontal_calendar: ^0.0.4
-  multi_select_item: ^1.0.3
-  modal_bottom_sheet: ^1.0.0+1
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
-  firebase_auth: ^0.18.0+1
-  firebase_core: "0.5.3"
-
-  firebase_database: ^4.4.0
   cloud_firestore: ^0.14.0
-  provider: ^3.1.0
-  flutter_spinkit: "^4.1.2"
-  flutter_datetime_picker: ^1.4.0
-  intl: ^0.16.1
-  outline_material_icons: ^0.1.0
-  sqflite: ^1.1.5
-  shared_preferences: ^0.5.3+1
-  share: ^0.6.1+1
-  rflutter_alert: ^1.1.0
-  fluttertoast: ^7.1.6
-  uuid: ^2.2.2
+  cupertino_icons: ^0.1.3
   faker: ^1.3.0
+  firebase: ^8.0.0
+  firebase_auth: ^0.18.0+1
+  firebase_core: ^0.7.0
+  firebase_database: ^4.4.0
+  flutter_datetime_picker: ^1.4.0
+  flutter_spinkit: ^4.1.2
+  fluttertoast: ^7.1.6
+  horizontal_calendar: ^0.0.4
+  intl: ^0.16.1
   mailer: ^3.2.1
+  modal_bottom_sheet: ^1.0.0+1
+  multi_select_item: ^1.0.3
+  outline_material_icons: ^0.1.0
+  provider: ^3.1.0
+  rflutter_alert: ^1.1.0
+  share: ^0.6.1+1
+  shared_preferences: ^0.5.3+1
+  sqflite: ^1.1.5
+  uuid: ^2.2.2
 
 dev_dependencies:
-
   flutter_test:
     sdk: flutter
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter.
 flutter:
 
@@ -72,13 +65,10 @@ flutter:
     - assets/images/
     - assets/images/icons/
   #   - images/a_dot_ham.jpeg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
